--- a/starwars.Rmd
+++ b/starwars.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Visualizing Starwars characters"
-author: "YOU"
+author: "Olivia Zhang"
 date: "`r Sys.Date()`"
 output: 
   html_document: 
@@ -17,11 +17,21 @@ library(tidyverse)
 ```{r starwars-plot}
 ggplot(data = starwars, 
        mapping = aes(x = height, y = mass, color = gender, size = birth_year)) +
-  geom_point(color = "#30509C") +
+  geom_point(color = "pink") +
   labs(size = "Birth year", x = "Height", y = "Mass")
 ```
 
 ### Stretch goal: Add labels for title, x and y axes, and size of points.
+
+```{r}
+ggplot(data = starwars, 
+       mapping = aes(x = height, y = mass, color = gender, size = birth_year)) +
+  geom_point(color = "pink") +
+  labs(title = "Height/Mass plot",
+         size = "Birth year", x = "Height", y = "Mass"
+       )
+```
+
 
 ## References {#references}
 1. Assignment Adapted from [Mine Cetinkaya-Rundel's Data Science in a Box](https://github.com/rstudio-education/datascience-box)
